Optimize /observationlevels GET endpoint for use with dynamic obs lvls